[package]
name = "rust_crud_api"
version = "0.1.0"
authors = ["Mihir Wadekar <mwadekar2000@gmail.com>"]
edition = "2021"

# Web framework for Rust
[dependencies.actix-web]
version = "4.0"

# Serialization and deserialization library
[dependencies.serde]
version = "1.0"
features = ["derive"]

# For mapping PostgreSQL rows to Rust structs
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
tokio-postgres = "0.7" # Asynchronous PostgreSQL driver

[[bin]]
name = "rust_crud_api"
path = "src/main.rs"
